--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ license = "AGPL-3.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dirs = "4.0.0"
+pls = "0.2.2"
+lazy_static = "1.4.0"
 glib = "0.15.12"
 gtk = "0.15.5"
-pls = "0.2.2"
 gstreamer = "0.18.8"
-lazy_static = "1.4.0"
