--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ pls = "0.2.2"
 lazy_static = "1.4.0"
 glib = "0.15.12"
 gtk = "0.15.5"
-gstreamer = "0.18.8"
+reqwest = "0.11.12"
+tokio = { version = "1.21.1", features = ["full"] }
+rodio = "0.16.0"
