--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ license = "AGPL-3.0"
 dirs = "4.0.0"
 pls = "0.2.2"
 lazy_static = "1.4.0"
-glib = "0.15.12"
-gtk = "0.15.5"
 reqwest = "0.11.12"
 tokio = { version = "1.21.1", features = ["full"] }
 rodio = "0.16.0"
+eframe = "0.19.0"
