--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "AGPL-3.0"
 [dependencies]
 dirs = "4.0.0"
 pls = "0.2.2"
-lazy_static = "1.4.0"
+once_cell = "1.17.1"
 reqwest = "0.11.12"
 tokio = { version = "1.21.1", features = ["full"] }
 rodio = "0.16.0"
