--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 keywords = ["audio", "internet-radio"]
 categories = ["multimedia::audio"]
 license = "AGPL-3.0"
+exclude = ["screenshots/*"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
