--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_radio"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Pat Laster <palaster307@gmail.com>"]
 description = """
 Radio Rust is minimalist rust based Internet Radio Player using eframe, Reqwest, and Rodio
@@ -23,5 +23,5 @@ pls = "0.2.2"
 once_cell = "1.17.1"
 reqwest = "0.11.12"
 tokio = { version = "1.21.1", features = ["full"] }
-rodio = "0.16.0"
+rodio = { version = "0.17.1", default-features = false, features = ["symphonia-mp3"] }
 eframe = "0.19.0"
